--- a/Web/EasyTravel.Web/Views/Home/Privacy.cshtml
+++ b/Web/EasyTravel.Web/Views/Home/Privacy.cshtml
@@ -1,139 +1,138 @@
 @{
     this.ViewData["Title"] = "Privacy Policy";
 }
-<h1>@this.ViewData["Title"]</h1>
 
 
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div class="col-lg-12">
 
-<html xmlns="https://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Geocoding in Bing Maps</title>
-    <script type="text/javascript" src="https://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.3"></script>
-
-    <script type="text/javascript">
-        var myMap = null;
-
-        function LoadMap() {
-            myMap = new VEMap("mapDiv");
-            myMap.LoadMap();
-
-            StartGeocoding("1 Microsoft Way, Redmond WA");
-        }
-
-        function UnloadMap() {
-            if (myMap != null) {
-                myMap.Dispose();
-            }
-        }
-    </script>
-</head>
-<body onload="LoadMap()" onunload="UnloadMap()">
-    <div style="position:relative;width:640px;height:480px;" id="mapDiv" />
-</body>
-</html>
-
-@*<div id="mapdiv" style="width: 300px; height: 300px;"></div>
-
-    @section Scripts {
-        <script>
-            document.getElementsByTagName("h1")[0].remove();
-        </script>
-
-        <script src="https://openlayers.org/api/OpenLayers.js"></script>
-        <script>
-            map = new OpenLayers.Map("mapdiv");
-            map.addLayer(new OpenLayers.Layer.OSM());
-            var lonLat = new OpenLayers.LonLat(-0.1279688, 51.5077286)
-                .transform(
-                    new OpenLayers.Projection("EPSG:4326"), // transform from WGS 1984
-                    map.getProjectionObject() // to Spherical Mercator Projection
-                );
-            var zoom = 14;
-            var markers = new OpenLayers.Layer.Markers("Markers");
-            map.addLayer(markers);
-            markers.addMarker(new OpenLayers.Marker(lonLat));
-            map.setCenter(lonLat, zoom);
-        </script>
-    }*@
-
-@*@model EasyTravel.Web.ViewModels.Home.LocationViewModel
-@{
-    ViewBag.Title = "Home Page";
-}
-
-<div class="jumbotron">
-    <h2>MAP INTEGRATION</h2>
-</div>
-
-<div class="row">
-    <div class="col-md-12 map">
-        <div id="myMap" style="width:100%; height:610px;"></div>
+    <div class="about_text_highlight"><h1>Privacy Policy</h1></div>
+    <p>
+        This privacy policy ("policy") will help you understand how <strong>EasyTravel <i class="fas fa-globe-americas"></i></strong> ("us", "we", "our") uses and protects the data you provide to us when you visit and use this website ("website", "service").
+    </p>
+    <p>
+        We reserve the right to change this policy at any given time, of which you will be promptly updated. If you want to make sure that you are up to date with the latest changes, we advise you to frequently visit this page.
+    </p>
+    <div class="about_text_highlight">
+        <h3>
+            What User Data We Collect
+        </h3>
     </div>
+
+    <p>
+        When you visit the website, we may collect the following data:
+    </p>
+    <p>
+        <ul>
+            <li>
+                &#8226;
+                Your IP address.
+            </li>
+            <li>
+                &#8226;
+                Your contact information and email address.
+            </li>
+            <li>
+                &#8226;
+                Other information such as interests and preferences.
+            </li>
+            <li>
+                &#8226;
+                Data profile regarding your online behavior on our website.
+            </li>
+        </ul>
+    </p>
+    <div class="about_text_highlight">
+        <h3>
+            Why We Collect Your Data
+        </h3>
+    </div>
+
+    <p>
+        We are collecting your data for several reasons:
+    </p>
+    <p>
+        <ul>
+            <li>
+                &#8226;
+                To better understand your needs.
+            </li>
+            <li>
+                &#8226;
+                To improve our services and products.
+            </li>
+            <li>
+                &#8226;
+                To send you promotional emails containing the information we think you will find interesting.
+            </li>
+            <li>
+                &#8226;
+                To contact you to fill out surveys and participate in other types of market research.
+            </li>
+            <li>
+                &#8226;
+                To customize our website according to your online behavior and personal preferences.
+            </li>
+        </ul>
+    </p>
+    <div class="about_text_highlight">
+        <h3>
+            Safeguarding and Securing the Data
+        </h3>
+    </div>
+
+    <p>
+        <strong>EasyTravel <i class="fas fa-globe-americas"></i></strong> is committed to securing your data and keeping it confidential. <strong>EasyTravel <i class="fas fa-globe-americas"></i></strong> has done all in its power to prevent data theft, unauthorized access, and disclosure by implementing the latest technologies and software, which help us safeguard all the information we collect online.
+    </p>
+    <div class="about_text_highlight">
+        <h3>
+            Our Cookie Policy
+        </h3>
+    </div>
+
+    <p>
+        Once you agree to allow our website to use cookies, you also agree to use the data it collects regarding your online behavior (analyze web traffic, web pages you spend the most time on, and websites you visit).
+    </p>
+    <p>
+        The data we collect by using cookies is used to customize our website to your needs. After we use the data for statistical analysis, the data is completely removed from our systems.
+    </p>
+    <p>
+        Please note that cookies don't allow us to gain control of your computer in any way. They are strictly used to monitor which pages you find useful and which you do not so that we can provide a better experience for you.
+    </p><p>
+        If you want to disable cookies, you can do it by accessing the settings of your internet browser. (Provide links for cookie settings for major internet browsers).
+    </p>
+    <div class="about_text_highlight">
+        <h3>
+            Links to Other Websites
+        </h3>
+    </div>
+
+    <p>
+        Our website contains links that lead to other websites. If you click on these links <strong>EasyTravel <i class="fas fa-globe-americas"></i></strong> is not held responsible for your data and privacy protection. Visiting those websites is not governed by this privacy policy agreement. Make sure to read the privacy policy documentation of the website you go to from our website.
+    </p>
+    <div class="about_text_highlight">
+        <h3>
+            Restricting the Collection of your Personal Data
+        </h3>
+    </div>
+
+    <p>
+        At some point, you might wish to restrict the use and collection of your personal data. You can achieve this by doing the following:
+    </p>
+    <p>
+        <ul>
+            <li>
+                &#8226;
+                When you are filling the forms on the website, make sure to check if there is a box which you can leave unchecked, if you don't want to disclose your personal information.
+            </li>
+            <li>
+                &#8226;
+                If you have already agreed to share your information with us, feel free to contact us via email and we will be more than happy to change this for you.
+            </li>
+        </ul>
+    </p>
+    <p>
+        <strong>EasyTravel <i class="fas fa-globe-americas"></i></strong> will not lease, sell or distribute your personal information to any third parties, unless we have your permission. We might do so if the law forces us. Your personal information will be used when we need to send you promotional materials if you agree to this privacy policy.
+    </p>
+
 </div>
-
-
-@section Scripts{
-    <script type='text/javascript'>
-
-    function loadMapScenario() {
-        var map = new Microsoft.Maps.Map(document.getElementById('myMap'), {
-            credentials: "FeXGylbidJHinLFlBZzTS6cKzpRbxadZHBjroftrhGCt-OCk3FD7DdThXL5zH",
-            mapTypeId: Microsoft.Maps.MapTypeId.road,
-            zoom: 5
-        });
-
-        // Create the infobox for the pushpin
-        var infobox = null;
-
-        //declare addMarker function
-        function addMarker(latitude, longitude, title, description, pid)
-        {
-            var marker = new Microsoft.Maps.Pushpin(new Microsoft.Maps.Location(latitude, longitude), { color: 'green' });
-
-            infobox = new Microsoft.Maps.Infobox(marker.getLocation(), {
-                visible : false
-            });
-
-            marker.metadata = {
-                id: pid,
-                title: title,
-                description: description
-            };
-
-            Microsoft.Maps.Events.addHandler(marker, 'mouseout', hideInfobox);
-            Microsoft.Maps.Events.addHandler(marker, 'mouseover', showInfobox);
-
-            infobox.setMap(map);
-            map.entities.push(marker);
-            marker.setOptions({ enableHoverStyle: true });
-        };
-
-        function showInfobox(e) {
-            if (e.target.metadata) {
-                infobox.setOptions({
-                    location: e.target.getLocation(),
-                    title: e.target.metadata.title,
-                    description: e.target.metadata.description,
-                    visible: true
-                });
-            }
-        }
-
-        function hideInfobox(e) {
-            infobox.setOptions({ visible: false });
-        }
-
-        //add markers to map
-        @if (Model.Title != null)
-        {  
-            @:addMarker(@Model.Latitude, @Model.Longitude, '@Model.Title', '@Model.Description', @Model.LocationId);
-            
-        }
-    }
-    </script>
-    <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?branch=release&callback=loadMapScenario' async defer></script>
-
-}*@
