--- a/Web/EasyTravel.Web/Views/Shared/_FooterPartial.cshtml
+++ b/Web/EasyTravel.Web/Views/Shared/_FooterPartial.cshtml
@@ -11,11 +11,11 @@
                     <!-- Content -->
                     <h6 class="text-uppercase text-white fw-bold mb-4">
                         <br>
-                        <i class="fas fa-gem me-3"></i>Company name
+                        <i class="fas fa-gem me-3"></i>About Us
                     </h6>
                     <p>
-                        Here you can use rows and columns to organize your footer content. Lorem ipsum
-                        dolor sit amet, consectetur adipisicing elit.
+                        Welcome to EasyTravel, your number one source for booking. We're dedicated to providing you the very best of travel, with an emphasis on details
+                        We hope you enjoy our application as much as we enjoy offering them to you.
                     </p>
                 </div>
 
@@ -24,20 +24,14 @@
                     <!-- Links -->
                     <h6 class="text-uppercase text-white fw-bold mb-4">
                         <br>
-                        Useful links
+                        <i class="fas fa-comment"></i>
                     </h6>
                     <p>
-                        <a href="#!" class="text-reset">Pricing</a>
+
+                        If you have any questions or comments, please don't hesitate to contact us.
+
                     </p>
-                    <p>
-                        <a href="#!" class="text-reset">Settings</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Orders</a>
-                    </p>
-                    <p>
-                        <a href="#!" class="text-reset">Help</a>
-                    </p>
+
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
