--- a/Web/EasyTravel.Web/Views/Properties/ById.cshtml
+++ b/Web/EasyTravel.Web/Views/Properties/ById.cshtml
@@ -192,7 +192,7 @@
             }
         </div>
     </div>
-
+</div>
     <form method="post" id="antiForgeryForm"></form>
     @section Scripts {
         <script>
@@ -204,13 +204,13 @@
                 var data = { propertyId: propertyId, value: value };
                 $.ajax({
                     type: "POST",
-                    url: "/api/Raitings",
+                    url: "/api/Ratings",
                     data: JSON.stringify(data),
                     headers: {
                         'X-CSRF-TOKEN': antiForgeryToken
                     },
                     success: function (data) {
-                        $('#averageVoteValue').html(data.averageRaiting.toFixed(1));
+                        $('#averageVoteValue').html(data.averageRating.toFixed(1));
                     },
                     contentType: 'application/json',
                 });
