--- a/Web/EasyTravel.Web/Views/Bookings/CreateBooking.cshtml
+++ b/Web/EasyTravel.Web/Views/Bookings/CreateBooking.cshtml
@@ -15,7 +15,8 @@
                         <h1>Make your booking</h1>
                     </div>
                   
-                    <form method="post">                       
+                    <form method="post"> 
+                        <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="form-group text-white">
                             <label asp-for="@this.Model.PropertyName"></label>
                             <input asp-for="@this.Model.PropertyName" class="form-control" />
@@ -42,7 +43,7 @@
                             <div class="form-group text-white">
                                 <label asp-for="@this.Model.PeopleCount"></label>
                                 <input asp-for="@this.Model.PeopleCount" class="form-control" required>
-                                <span asp-validation-for="@this.Model.PeopleCount" class="text-danger"></span>
+                               
                             </div>
                             </div>
                      
